# formix

./: .gitignore  README.md  comprehensive_test_suite_with_db.py  example_usage.py  experiments.py  manage_nodes.sh  pyproject.toml  run_experiments.sh  run_nodes_robust.sh  test_basic.py  test_network.py
docs/: COMPREHENSIVE_TUTORIAL.md  EXPERIMENT_REPORT.md  SETUP_GUIDE.md  USER_STORY.md  VISION_STRUCTURED.md
src/formix/: __init__.py  __main__.py
src/formix/cli/: __init__.py  main.py
src/formix/core/: __init__.py  network.py  node.py
src/formix/db/: __init__.py  database.py
src/formix/protocols/: __init__.py  aggregation.py  messaging.py  secret_sharing.py
src/formix/utils/: __init__.py  async_helpers.py  config.py  helpers.py
tests/: run_tests.py  test_basic.py  test_crypto.py  test_large_scale.py  test_medium_scale.py  test_simple.py
