[project]
name = "formix"
version = "0.1.0"
description = "Private Map Secure Reduce - A privacy-preserving distributed computation network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.19.0",
    "loguru>=0.7.2",
    "pydantic>=2.5.0",
    "uvloop>=0.19.0",
]

[project.scripts]
formix = "formix.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "PT", "RUF", "SIM", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
